# AgenteIngenieria

./: .gitignore
qa-ingenieria/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  start.ps1  stop.ps1
qa-ingenieria/.streamlit/: config.toml
qa-ingenieria/ai_agents/: parser.py  provider.py  revisor.py  similarity.py  tipo_extractor.py  triage.py  util.py
qa-ingenieria/api/: aprendizaje.py  historial.py  main.py  schemas.py
qa-ingenieria/docs/: ARCHITECTURE.md  CAPTURA_REGLAS.md  DISENO_Taxonomia_Familias.md  PLAN_Taxonomia_Facetas.md  QA_GLOBAL.md  REVISION_UI.md  UI_Guia.md  cotejar_ocr_vlm_architecture_review.md
qa-ingenieria/frontend/: index.html  package-lock.json  package.json  vite.config.ts
qa-ingenieria/graph/: edges.py  graph.py  nodes.py  revision.py  state.py
qa-ingenieria/knowledge/: catalogo.json  disciplinas.json  entrega_calculo.md  entrega_fabricacion.md  facetas.yaml
qa-ingenieria/prompts/: cotejar.txt  parser.txt  revisor.txt  tipo_extractor.txt  triage.txt
qa-ingenieria/sandbox/: fakes.py  manifest.py  studio_graph.py  ui_intake.py
qa-ingenieria/scripts/: descargar_fixtures.py  extraer_pids.py  extraer_planos_arq.py  generar_planos_demo.py  generar_refs_normas.py  make_fixtures.py  probe_api.py  probe_api_cotejar.py  run_cotejar.py  run_local.py  test_idavuelta.py
qa-ingenieria/tests/: conftest.py  test_api.py  test_aprendizaje.py  test_edges.py  test_extractor.py  test_facetas.py  test_historial.py  test_informe.py  test_layout.py  test_nodes.py  test_normas.py  test_ocr.py  test_perfiles.py  test_reglas.py  test_reglas_revision.py  test_revision.py  test_similarity.py  test_state.py  test_tier3_vlm.py  test_tipos.py  test_triage.py  (+1 more)
(+81 files in other folders)
